<resources>
    <string name="app_name">Meet SC</string>
    <string name="delete_meeting_content_description">Delete Meeting</string>
    <string name="edit_meeting_content_description">Edit Meeting</string>
    <string name="create_new_meeting_content_description">Create new meeting</string>
    <string name="filter_meetings_action_title">Filter meetings</string>
    <string name="choose_location">Choose a location</string>
    <string name="duration_picker_positive_btn">OK</string>
    <string name="duration_picker_negative_btn">Cancel</string>
    <string name="duration_format">%d hours and %d minutes</string>
    <string name="required_field_error_msg">Invalid field</string>
    <string name="meeting_scheduled_successfully_msg">Meeting scheduled successfully</string>
    <string name="time_slot_overlaps_msg">The time slot you have chosen overlaps an already booked slot</string>
    <string name="apply_filter_btn_txt">Apply</string>
    <string name="reset_filter_btn_txt">Reset</string>
    <string name="meeting_deletion_failure">Deletion failed</string>
    <string name="menu_action_filter_by_date_txt">Filter by date</string>
    <string name="menu_action_filter_by_location_txt">Filter by location</string>
    <string name="menu_action_reset_filters_txt">Reset filter</string>
    <string name="participant_emails_field_error_msg">Minimum 2 participants</string>
    <string name="location_selector_error_text">Please select a location</string>
    <string name="date_picker_action_hint">Meeting date</string>
    <string name="time_picker_action_hint">Start time</string>
    <string name="meeting_subject_edit_text_hint">Meeting subject</string>
    <string name="duration_picker_action_hint">Duration</string>
    <string name="color_picker_action_hint">Choose a color</string>
    <string name="color_chosen_hint">Chosen color</string>
    <string name="participant_emails_edit_text_hint">Participant</string>
    <string name="add_participant_email_btn_text">Add</string>
    <string name="added_participant_emails">Participant emails:</string>
    <string name="edit_button_text">Edit</string>
    <string name="submit_button_text">Submit</string>
    <string name="choose_color">Choose</string>
    <string name="cancel_choosing_color">Cancel</string>
    <string name="menu_action_delete_all_meetings_txt">Delete all meetings</string>
    <string name="menu_action_delete_by_date_txt">Delete by date</string>
    <string name="menu_action_delete_by_location_txt">Delete by location</string>
</resources>